--- a/config/dev.env
+++ b/config/dev.env
@@ -1,3 +1,3 @@
 PORT = 5000
-DB_URL_LOCAL = mongodb://127.0.0.1:27017/chatApp
+DB_URL_LOCAL = mongodb+srv://khaled:khaled12345@chatapp.zb1g3.mongodb.net/chatApp
 TOKEN_KEY = generationToken
